# pattern

./: .gitignore  CMakeLists.txt
Factory/: CMakeLists.txt  ExportDB.cpp  ExportDBOperate.cpp  ExportFileApi.cpp  ExportOperate.cpp  ExportTxtFile.cpp  ExportTxtFileOperate.cpp  main.cpp
Factory/include/: ExportDB.h  ExportDBOperate.h  ExportFileApi.h  ExportOperate.h  ExportTxtFile.h  ExportTxtFileOperate.h
SimpleFactory/: Api.cpp  CMakeLists.txt  Client.cpp  Factory.cpp  ImplOne.cpp  ImplTwo.cpp  main.cpp
SimpleFactory/include/: Api.h  Client.h  DynOBJ.h  Factory.h  ImplOne.h  ImplTwo.h
UML/: PatternDesign.mdj
